# rust-url-shortener

./: README.md
backend/: Cargo.toml
backend/migration/: Cargo.toml
backend/migration/src/: lib.rs  m20260717_224502_create_users_table.rs  m20260717_224504_create_urls_table.rs  m20260721_013424_update_urls_table.rs
backend/src/: db.rs  main.rs  router.rs
backend/src/config/: env.rs
backend/src/entities/: mod.rs  prelude.rs  url.rs  user.rs
backend/src/handlers/: auth.rs  mod.rs  redirect.rs  urls.rs
backend/src/handlers/auth/: login.rs  logout.rs  mod.rs  refresh.rs  signup.rs  user.rs
backend/src/handlers/urls/: all.rs  archive.rs  delete.rs  mod.rs  shorten.rs  stats.rs  update.rs  url.rs
backend/src/middlewares/: cors.rs
backend/src/routes/: api.rs  auth.rs  mod.rs  router.rs  urls.rs
backend/src/utils/: auth.rs  error.rs  image.rs  mod.rs  response.rs
frontend/: README.md  package.json  proxy.ts
frontend/app/: globals.css  layout.tsx  page.tsx
frontend/app/[code]/: route.ts
frontend/app/dashboard/: layout.tsx  page.tsx
frontend/app/dashboard/archived/: page.tsx
frontend/app/dashboard/links/: page.tsx
frontend/app/dashboard/qr/: page.tsx
frontend/app/dashboard/settings/: page.tsx
frontend/components/: auth-dialog.tsx  create-link-dialog.tsx  edit-link-dialog.tsx  link-details-dialog.tsx  link-row.tsx  logo.tsx  qr-dialog.tsx  sidebar.tsx  stat-card.tsx  theme-provider.tsx  url-input.tsx
frontend/components/ui/: confirm-delete-dialog.tsx  skeleton.tsx
frontend/lib/: api.ts  auth-context.tsx  dummy-data.ts  utils.ts
