[package]
name = "backend"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = "0.8.9"
dotenv = "0.15.0"
tokio = { version = "1.52.3", features = ["full"] }
tower = "0.5.3"
tower-http = { version = "0.6.1", features = ["cors"] }
serde = { version = "1", features = ["derive"] }
thiserror = "2"
uuid = { version = "1.8", features = ["v4", "serde"] }
sea-orm = { version = "1.1", features = [ "sqlx-postgres", "runtime-tokio-rustls", "macros" ] }